# Chronarch

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial_schema.py
docker/: Dockerfile  docker-compose.yml
src/chronarch/: config.py
src/chronarch/api/: main.py  schemas.py
src/chronarch/api/routes/: health.py  predictions.py
src/chronarch/backtest/: metrics.py  validator.py
src/chronarch/data/: models.py  repository.py
src/chronarch/data/ingestion/: binance.py  scheduler.py
src/chronarch/db/: connection.py
src/chronarch/features/: pipeline.py  statistics.py  technical.py
src/chronarch/ml/: dataset.py  model.py  predictor.py  trainer.py
tests/: test_features.py
