[project]
name = "chronarch"
version = "0.1.0"
description = "Chronarch - Bitcoin price forecasting and trading intelligence platform"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    # Database
    "sqlmodel>=0.0.14",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # Data processing
    "pandas>=2.1.0",
    "numpy>=1.26.0,<2.0.0",
    # ML - PyTorch (CUDA 12.x)
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "torchaudio>=2.5.0",
    # ML - Traditional
    "lightgbm>=4.2.0",
    "scikit-learn>=1.4.0",
    # HTTP client
    "httpx>=0.26.0",
    # Configuration
    "pydantic-settings>=2.1.0",
    # Scheduling
    "apscheduler>=3.10.0",
    # Utilities
    "structlog>=24.1.0",
    "python-dateutil>=2.8.0",
    "ipykernel>=7.1.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    # Jupyter
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chronarch"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
